layout issue fixed

--- a/src/components/BarChart/BarChart.module.css
+++ b/src/components/BarChart/BarChart.module.css
@@ -7,7 +7,7 @@
  .chart_container {
      display: flex;
      width: 100%;
-     height: 100%;
+     height: 89%;
      justify-content: center;
      align-items: flex-end;
      gap: 4px;
